--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -572,7 +572,7 @@ img.pad-top { padding-top: 1em; }
 
 @media (max-width: 860px) { .btn, .btn-default { padding-left: 45px; padding-right: 45px; } }
 
-@media (max-width: 768px) { .btn, .btn-default { width: 100%; display: block; font-size: 1em; } }
+@media (max-width: 480px) { .btn, .btn-default { width: 100%; display: block; font-size: 1em; } }
 
 .a-btn { text-decoration: none; }
 
@@ -633,13 +633,13 @@ header.site { background-color: transparent; border-bottom: 1px solid white; }
 
 .branding { display: inline-block; margin-top: 20px; margin-bottom: 20px; text-decoration: none; }
 
-@media (max-width: 480px) { .branding { display: block; text-align: center; } }
+@media (max-width: 768px) { .branding { display: block; text-align: center; } }
 
 .branding span { color: white; font-size: 1.25em; font-weight: 100; }
 
 nav.main { float: right; margin-top: 24px; background-color: transparent; }
 
-@media (max-width: 480px) { nav.main { float: none; margin-bottom: 24px; text-align: center; } }
+@media (max-width: 768px) { nav.main { float: none; margin-bottom: 24px; text-align: center; } }
 
 nav.main ul { margin: 0; padding: 0; list-style: none; }
 
@@ -660,7 +660,11 @@ nav.main li + li a { margin-left: 20px; }
 --------------------------------------------------------------*/
 .hero { position: relative; height: calc(100vh - 125px); text-align: left; background: -webkit-linear-gradient(#006778, rgba(0, 103, 120, 0.85)), url("../img/bg-jags.jpg") 0 0 no-repeat; background: linear-gradient(#006778, rgba(0, 103, 120, 0.85)), url("../img/bg-jags.jpg") 0 0 no-repeat; background-size: cover; }
 
+@media (max-width: 768px) { .hero { height: 400px; } }
+
 .hero .intro { padding-top: 200px; color: white; }
+
+@media (max-width: 768px) { .hero .intro { padding-top: 20px; } }
 
 .hero .intro .title { color: white; }
 
@@ -698,15 +702,25 @@ nav.main li + li a { margin-left: 20px; }
 --------------------------------------------------------------*/
 section { position: relative; overflow: hidden; padding: 0; width: 100%; height: 100vh; }
 
-section .panels { position: absolute; width: 100%; height: 100%; min-height: 100vh; top: 0; left: 0; padding: 0 60px; overflow: auto; -webkit-overflow-scrolling: touch; }
+section .panels { position: absolute; width: 100%; height: 100%; min-height: 100vh; top: 0; left: 0; padding: 60px; overflow: auto; -webkit-overflow-scrolling: touch; }
+
+@media (max-width: 768px) { section .panels { position: relative; padding: 0; overflow: hidden; } }
+
+section .panels.hide-scroll { width: 103%; }
+
+@media (min-width: 768px) { section .panels section { padding-top: 100px; } }
+
+.snap-menu.two { position: absolute; z-index: 999; }
 
 .player-container { margin: 0; padding: 0; background-color: white; }
 
-.player-bg { position: relative; width: 50%; height: 100vh; margin: 0; padding: 0; opacity: 0.9; }
+.player-bg { position: relative; width: 50%; height: 100vh; margin: 0; padding: 0; opacity: 1; }
+
+@media (max-width: 768px) { .player-bg { width: 100%; height: 300px; } }
 
 .player-bg:after { content: ''; position: absolute; background-image: url("../img/effect-trees.jpg"); background-size: cover; background-repeat: no-repeat; background-color: transparent; mix-blend-mode: soft-light; background-position: -5rem; width: 100%; height: 100%; z-index: 1; -webkit-animation: blendBg 50s linear infinite; animation: blendBg 50s linear infinite; }
 
-.player-bg.bg-cover { background-color: transparent; background-position: 40% 100%; background-repeat: no-repeat; background-size: cover; }
+.player-bg.bg-cover { background-color: transparent; background-position: center center; background-repeat: no-repeat; background-size: cover; }
 
 .player-bg.ramsey { background-image: url("../img/player-ramsey.jpg"); }
 
@@ -729,6 +743,8 @@ section .panels { position: absolute; width: 100%; height: 100%; min-height: 100
 .player-bg.woodard { background-image: url("../img/player-woodard.jpg"); }
 
 .player-bio { padding: 60px; }
+
+@media (max-width: 768px) { .player-bio { padding: 0 60px 60px; } }
 
 /*--------------------------------------------------------------
 # Section: Ramsey
