--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -162,13 +162,144 @@ nav.main {
 }
 .subnav.fixed {
 	position: fixed;
-    bottom: 0;
+    top: 0;
     left: 0;
     width: 100%;
     z-index: 99999;
     box-shadow: 0px 1px 3px 0px rgba(black, 0.2);
     transition: all 0.2s ease-in-out;
 }
+
+
+.video-tiles {
+    position: relative;
+	z-index: 1;
+	background: white;
+	//transition: transform 0.6s ease;
+	.tiles-a{
+		width: 100%;
+		position: relative;
+		overflow: hidden;
+	}
+}
+.aside {
+	position: fixed;
+	top: 55px;
+	right: 0;
+	width: 50%;
+	height: 100%;
+	color: white;
+    background: linear-gradient(#006778, rgba(0, 103, 120, 0.85)), url("../img/bg-jags.jpg") center center no-repeat;
+    background-size: cover;
+	overflow: hidden;
+	z-index: -1;
+	opacity: 0;
+	transition: opacity 0.6s ease-in-out;
+	.aside-details {
+		height: 100vh;
+	}
+
+	iframe {
+		width: 100%;
+		height: 100vh;
+		vertical-align: top;
+	}
+	.wrapper {
+		padding: 1em;
+	}
+	.close {
+		width: 25px;
+		display: block;
+		position: absolute;
+		z-index: 2;
+		top: 3em;
+		right: 3em;
+        border-radius: 50%;
+	}
+}
+
+.show {z-index:10; opacity: 1;transition: opacity 0.6s ease-in-out;}
+
+.show-detail {
+	overflow: hidden;
+	.video-tiles { 
+	    //transform: translateX(-60%);
+	    z-index: -1;
+	}
+}
+
+.visually-hidden { 
+  position: absolute; 
+  overflow: hidden; 
+  clip: rect(0 0 0 0); 
+  height: 1px; width: 1px; 
+  margin: -1px; padding: 0; border: 0; 
+}
+
+
+.video-wrapper {
+  position: relative;
+  width: 100%;
+  height: 0;
+  background-color: rgba(black,0.5);
+  &43 {
+    padding-top: 75%;
+  } 
+  &169 {
+    //padding-top: 56%;
+  } 
+}
+.video-iframe {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(black,0.4);
+}
+.video-poster {
+  position: absolute;
+  background-color: rgba(black,0.4);
+  top: 0;
+  right: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  margin: 0;
+  padding: 0;
+  cursor: pointer;
+  border: 0;
+  outline: none;
+  background-position: 50% 50%;
+  background-size: 100% 100%;
+  background-size: cover;
+  text-indent: -999em;
+  overflow: hidden;
+  opacity: 1;
+  transition: opacity 800ms, height 0s;
+  transition-delay: 0s, 0s;
+  &:before {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 80px;
+    height: 80px;
+    margin: -40px 0 0 -40px;
+    border-radius: 100%;
+  }
+  .video-wrapper-active & {
+    opacity: 0;
+    height: 0;
+    transition-delay: 0s, 800ms;
+  }
+}
+
+
+
+
 
 /*--------------------------------------------------------------
 # Section: Global
@@ -260,20 +391,12 @@ nav.main {
     }
     &.day {
 	    background-image: url('../img/player-day.jpg');
-	    &:after {
-		    background-image: url('../img/effect-skyline.jpg');
-		    animation-duration: 75s;
-	    }
     }
     &.holmes {
 	    background-image: url('../img/player-holmes.jpg');
     }
     &.allen {
 	    background-image: url('../img/player-allen.jpg');
-	    &:after {
-		    background-image: url('../img/effect-skyline.jpg');
-		    animation-duration: 75s;
-	    }
     }
     &.woodard {
 	    background-image: url('../img/player-woodard.jpg');
@@ -285,6 +408,51 @@ nav.main {
 	    padding: 0 60px 60px;
 	}
 }
+
+.video-player {
+	width: 100%;
+    height: 175px;
+    margin: 30px 0 15px;
+    text-align: center;
+    position: relative;
+    background: url(//i1284.photobucket.com/albums/a574/meecrobe/video_zps5bab07fb.jpg) center center no-repeat;
+    background-size: cover;
+    float: left; 
+}
+button.btn-video,
+.btn-video {
+	    width: 50px;
+		height: 50px;
+		background-color: rgba($accent, 0.8);
+		border: 3px solid $accent2;
+		border-radius: 50%;
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		margin-top: -25px;
+		margin-left: -25px;
+		outline: none;
+		cursor: pointer;
+		&.overlay::before {
+			top: 13px;
+			left: 16px;
+		}
+		&:before {
+		    content: "";
+			display: block;
+			width: 0;
+			height: 0;
+			position: relative;
+			left: 9px;
+			border-style: solid;
+			border-width: 8px 0 8px 16px;
+			border-color: transparent transparent transparent #fff;
+		}
+		&:hover {
+			background-color: rgba($accent, 1);
+		    border-color: darken($accent2, 2%);
+		}
+    }
 /*--------------------------------------------------------------
 # Section: Ramsey
 --------------------------------------------------------------*/
@@ -355,3 +523,24 @@ nav.main {
         background-position: 0;
     }
 }
+
+@keyframes slideInRight {
+  from {
+    transform: translate3d(100%, 0, 0);
+    visibility: hidden;
+  }
+
+  to {
+    transform: translate3d(0, 0, 0);
+    visibility: visible;
+  }
+}
+.slideInRight {
+    animation-name: slideInRight;
+}
+
+.animated {
+    animation-duration: 1s;
+    animation-fill-mode: both;
+}
+
