--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -81,6 +81,10 @@ h6 {
 	    font-size: 1em;
     }
 }
+.margin-bottom-less {
+    margin: 30px 0 -20px;
+    line-height: 1;
+}
 
 p {
 	line-height: 1.5;
@@ -215,7 +219,8 @@ img {
 	}
 }
 
-.pad-none {padding: 0;}
+.pad-none,
+.no-pad {padding: 0;}
 .text-center {text-align: center;}
 
 .title {
