--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -189,7 +189,9 @@ img {
 	}
     
 }
-.a-btn {text-decoration: none;}
+.a-btn {
+    text-decoration: none;
+}
 
 /* Helpers */
 /* Major classes, positioning */
