--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -19,11 +19,11 @@ body {
 a {
 	color: $primary;
 	transition: color 200ms;
-	
+
 	&:hover {
 		color: darken($primary, 5%);
 	}
-	
+
 	&:focus {
 		color: darken($primary, 5%);
 		outline: none;
@@ -81,9 +81,16 @@ h6 {
 	    font-size: 1em;
     }
 }
-.margin-bottom-less {
+ {
     margin: 30px 0 -20px;
     line-height: 1;
+}
+h3.margin-bottom-less {
+	  margin: 0 0 -20px;
+  	line-height: 1;
+		@media (max-width: $screen-sm) {
+			margin-top: 30px;
+		}
 }
 
 p {
@@ -91,11 +98,11 @@ p {
 	font-size: 1em;
 	font-weight: 300;
 	margin: 0;
-	
+
 	+ p {
-		margin-top: 1em; 
+		margin-top: 1em;
 	}
-	
+
 	@media (max-width: 768px) {
 	    font-size: 0.9em;
     }
@@ -115,7 +122,7 @@ li {
 img {
 	max-width: 100%;
 	height: auto;
-	
+
 	&.right {
 		float: right;
 		margin: 1em 0 1em 1em;
@@ -126,7 +133,7 @@ img {
 	&.pad-top {
 		padding-top: 1em;
 	}
-	
+
 }
 
 
@@ -181,13 +188,13 @@ img {
 	    padding-left: 45px;
 	    padding-right: 45px;
     }
-    
+
 	@media (max-width: $screen-xs) {
 		width: 100%;
 		display: block;
 		font-size: 1em;
 	}
-    
+
 }
 .a-btn {
     text-decoration: none;
@@ -215,7 +222,7 @@ img {
 	padding-top: 2em;
 	padding-bottom: 1em;
 	text-align: center;
-	
+
 	@media (max-width: 768px) {
 		max-width: 100%;
 	}
@@ -228,7 +235,7 @@ img {
 .title {
 	@media (max-width: 768px) {
 		text-align: center;
-	}	
+	}
 }
 .mobile-center {
 	@media (max-width: $screen-sm) {
