--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -81,7 +81,7 @@ h6 {
 	    font-size: 1em;
     }
 }
- {
+.margin-bottom-less {
     margin: 30px 0 -20px;
     line-height: 1;
 }
@@ -140,9 +140,9 @@ img {
 /* Buttons */
 .btn,
 .btn-default {
-    display: inline-block;
-    margin-bottom: 0;
-    height: 48px;
+	display: inline-block;
+	margin-bottom: 0;
+	height: 48px;
 	padding-left: 25px;
 	padding-right: 25px;
 	border: none;
@@ -153,12 +153,12 @@ img {
 	font-family: $font-heading;
 	font-size: $font-default;
 	font-weight: 400;
-    letter-spacing: 1px;
-    border-radius: 3px;
-    white-space: nowrap;
-    cursor: pointer;
-    transition: all linear 0.3s;
-    z-index: 1004;
+	letter-spacing: 1px;
+	border-radius: 3px;
+	white-space: nowrap;
+	cursor: pointer;
+	transition: all linear 0.3s;
+	z-index: 1004;
     &:hover {
 
 	}
