--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -492,6 +492,9 @@ button.btn-video,
 			border-style: solid;
 			border-width: 8px 0 8px 16px;
 			border-color: transparent transparent transparent #fff;
+			@media (max-width: $screen-sm) {
+				left: 0;
+			}
 		}
 		&:hover {
 			background-color: rgba($accent, 1);
