--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -81,7 +81,7 @@ nav.main {
 	position: relative;
 	height: calc(100vh - 125px);
 	text-align: left;
-	background: linear-gradient($primary, rgba($primary, 0.85)), url('../img/bg-jags.jpg') 0 -100px no-repeat;
+	background: linear-gradient($primary, rgba($primary, 0.85)), url('../img/bg-jags.jpg') top center no-repeat;
 	background-size: cover;
 	@media (max-width: $screen-sm) {
 	    height: 400px;
